--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.6.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.7.2",
+    "react-visibility-sensor": "^5.1.1",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -36,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.3.1"
   }
 }
